syntax = "proto3";
package io.restorecommerce.graph;

import "google/protobuf/any.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/resource_base.proto";

// Service provides the CRUD operations
service GraphService {
  rpc Traversal (TraversalRequest) returns (stream TraversalResponse);
}

message TraversalRequest {
  // Document handle either _id or _key value
  oneof vertex {
    Vertices vertices = 1;
    Collection collection = 2;
  }
  optional Options opts = 3;
  optional bool path = 4;
  optional io.restorecommerce.auth.Subject subject = 5;
  repeated Filters filters = 6;
}

message Vertices {
  optional string collection_name = 1;
  repeated string start_vertex_ids = 2;
}

message Collection {
  optional string collection_name = 1;
  optional uint32 limit = 2;
  optional uint32 offset = 3;
  repeated io.restorecommerce.resourcebase.Sort sorts = 4;
}

message Options {
 repeated string include_vertexs = 1; // to include vertices
 repeated string exclude_vertexs = 2; // to exclude vertices
 repeated string include_edges = 3; // to include vertices
 repeated string exclude_edges = 4; // to exclude vertices
 optional Direction direction = 5; // either inbound or outbound, defaults to outbound direction
 enum Direction {
   OUTBOUND = 0;
   INBOUND = 1;
 }
}


message Filters {
  optional string entity = 1; // entity on which the filters are applied
  optional string edge = 2; // if edge is specified depending on the direction filter are applied only for those entities
  repeated Filter filters = 3;
  enum Operator {
    and = 0;
    or = 1;
  }
  optional Operator operator = 4;
}

message Filter {
  optional string field = 1;
  enum Operation {
    eq = 0;
    lt = 1;
    lte = 2;
    gt = 3;
    gte = 4;
    isEmpty = 5;
    iLike = 6;
    in = 7;
    neq = 8;
  }
  optional Operation operation = 2;
  optional string value = 3;
  enum ValueType {
    STRING = 0; // default value type if not specified
    NUMBER = 1;
    BOOLEAN = 2;
    DATE = 3;
    ARRAY = 4;
  }
  optional ValueType type = 4;
  repeated Filters filters = 5;
}

message TraversalResponse {
  optional google.protobuf.Any data = 1; // vertices
  optional google.protobuf.Any paths = 2; // traversed vertices paths
  optional io.restorecommerce.status.OperationStatus operation_status = 3;
}